apps/base/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: http
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - vaultwarden.passer.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
